[gd_scene load_steps=3 format=3 uid="uid://cjr55wsdv0nng"]

[ext_resource type="Script" path="res://player.gd" id="1_dwtxk"]
[ext_resource type="PackedScene" uid="uid://bnpv673k3jiqg" path="res://clickable_card.tscn" id="2_i0xi2"]

[node name="Player" type="Node2D"]
script = ExtResource("1_dwtxk")

[node name="CardContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="CardRow1" type="HBoxContainer" parent="CardContainer"]
layout_mode = 2

[node name="Card1" parent="CardContainer/CardRow1" instance=ExtResource("2_i0xi2")]
layout_mode = 2

[node name="Card2" parent="CardContainer/CardRow1" instance=ExtResource("2_i0xi2")]
layout_mode = 2

[node name="Card3" parent="CardContainer/CardRow1" instance=ExtResource("2_i0xi2")]
layout_mode = 2

[node name="CardRow2" type="HBoxContainer" parent="CardContainer"]
layout_mode = 2

[node name="Card4" parent="CardContainer/CardRow2" instance=ExtResource("2_i0xi2")]
layout_mode = 2

[node name="Card5" parent="CardContainer/CardRow2" instance=ExtResource("2_i0xi2")]
layout_mode = 2

[node name="Card6" parent="CardContainer/CardRow2" instance=ExtResource("2_i0xi2")]
layout_mode = 2

[node name="PlayerName" type="Label" parent="CardContainer"]
layout_mode = 2
text = "PlayerName"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="card_flipped" from="CardContainer/CardRow1/Card1" to="." method="_on_card_1_card_flipped"]
[connection signal="card_flipped" from="CardContainer/CardRow1/Card2" to="." method="_on_card_2_card_flipped"]
[connection signal="card_flipped" from="CardContainer/CardRow1/Card3" to="." method="_on_card_3_card_flipped"]
[connection signal="card_flipped" from="CardContainer/CardRow2/Card4" to="." method="_on_card_4_card_flipped"]
[connection signal="card_flipped" from="CardContainer/CardRow2/Card5" to="." method="_on_card_5_card_flipped"]
[connection signal="card_flipped" from="CardContainer/CardRow2/Card6" to="." method="_on_card_6_card_flipped"]
